# exv.battlepass.near

./: .gitignore  Cargo.toml  build.sh  dev-deploy.sh
.vim/: coc-settings.json
halloffame/: Cargo.toml
halloffame/src/: crypto.rs  external.rs  lib.rs  owner.rs  utils.rs  web4.rs
nft/: Cargo.toml
nft/src/: external.rs  lib.rs  mint.rs  mints.rs  owner.rs  payout.rs  utils.rs
tests/sim/: main.rs  test_open.rs  test_private.rs
