[package]
name = "halloffame"
version = "0.1.0"
authors = ["Nikita Kuznetsov <n@8gen.team>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.8"
near-contract-standards = "4.0.0-pre.8"
hex = "0.4.3"
serde = "1"
libsecp256k1 = { version = "0.3.5", default-features = false  }
